fix alignment and bootstrap

--- a/style/style.css
+++ b/style/style.css
@@ -1,7 +1,8 @@
 body {
     background-color: #F6F3EE;
 	color:#555;
-	font:normal 1em Arial,sans-serif;
+    font:normal 1em Arial,sans-serif;
+    font-family: "GeoSansLight";
 	margin:auto;
     height:auto;
 }
@@ -45,7 +46,7 @@ body {
     height: 40vh;
     left: -100vw;
     position: absolute;
-    display:block;
+    /* display:block; */
     margin: 30vh 0%;    
     padding: 5% 0;
 
@@ -56,11 +57,9 @@ body {
 }
 
 @-webkit-keyframes slide-left {
-    100% { left: 0; }
-}
-
-@keyframes slide-left {
-    100% { left: 0; }
+    100% { left: 15px; }
+} @keyframes slide-left {
+    100% { left: 15px; }
 }
 
 
@@ -75,8 +74,16 @@ body {
     display: inherit;
 }
 
+.arrow-down{
+    display: block;
+    margin: auto;
+    width: 50px;
+    height: 100px;
+    cursor: pointer !important;
+
+}
+
 .content{
-    padding: 10% 10%;
     opacity: 0;
     -webkit-transition: opacity 1s ease-in-out;
     -moz-transition: opacity 1s ease-in-out;
@@ -93,15 +100,27 @@ body {
     height: 66vh;
 }
 
+.one-third-content{
+    height: 33vh;
+}
+
 #content_1{
-    padding: 15% 10%;
-    text-align: center;
+    /* padding: 5% 10%; */
+    /* text-align: center; */
     font-size: 2em;
 }
 
 #content_2{
 
 }
+
+.skill-table{
+    background-color: #303133;
+    border-radius: 3em;
+}
+
+
+
 
 
 
